Terumo Partdev/src/objects/Deployment_Tracking__c.object
<CustomObject>
    <description>Used to track components for deployment to other environments</description>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <picklist>
            <picklistValues>
                <fullName>Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Sharing Reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Button or Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compact Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORS Whitelist Origin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Data Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Report Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entitlement Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entitlement Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalation Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Data Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FlowDefinition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page Layout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployed_to_Prod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployed to Prod?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployed_to_Prod_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployed to Prod by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployment_Tracking1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployed_to_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployed to Test?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployed_to_Test_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployed to Test by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployment_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment_Comments__c</fullName>
        <label>Deployment Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_Type__c</fullName>
        <label>Deployment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pre Deployment Step</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Deployment Step</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Name__c</fullName>
        <inlineHelpText>Please enter the API Name of the object that this component is related to.</inlineHelpText>
        <label>Parent Object Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy to Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy to Prod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>User Story</label>
        <referenceTo>DDTracker__TKR_User_Story__c</referenceTo>
        <relationshipName>Deployment_Tracking</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Deployment Tracking</label>
    <nameField>
        <displayFormat>DT-{00000}</displayFormat>
        <label>Delployment Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>